Fix main element off screen.

--- a/styles/global.css
+++ b/styles/global.css
@@ -24,6 +24,7 @@ html {
 *::after {
   box-sizing: border-box;
   margin: 0;
+  max-width: 100%;
 }
 
 
